--- a/react/package.json
+++ b/react/package.json
@@ -1,5 +1,4 @@
 {
-  "proxy": "http://localhost:5000",
   "scripts": {
     "start": "snowpack dev",
     "build": "snowpack build",
@@ -8,6 +7,7 @@
     "lint": "prettier --check \"src/**/*.{js,jsx,ts,tsx}\""
   },
   "dependencies": {
+    "http2-proxy": "^5.0.53",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
